conan as option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
+if(USE_CONAN)
 cmake_minimum_required(VERSION 2.8.12)
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
+endif(USE_CONAN)
 
 set ( SOURCES 
         "src/laser_scanner.cpp"
@@ -21,4 +23,8 @@ endif()
 
 include_directories("include")
 add_library (laser_scanner SHARED ${SOURCES} ${HEADERS})
+if(USE_CONAN)
 target_link_libraries(laser_scanner PRIVATE ${CONAN_LIBS})
+else()
+target_link_libraries(laser_scanner PRIVATE lmscore math_lib urg_cpp sensor_utils)
+endif(USE_CONAN)
