--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,5 +26,5 @@ add_library (laser_scanner SHARED ${SOURCES} ${HEADERS})
 if(USE_CONAN)
 target_link_libraries(laser_scanner PRIVATE ${CONAN_LIBS})
 else()
-target_link_libraries(laser_scanner PRIVATE lmscore math_lib urg_cpp lms_sensor_utils)
+target_link_libraries(laser_scanner PRIVATE lmscore lms_math urg_cpp lms_sensor_utils)
 endif(USE_CONAN)
